// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactsForm returns contacts when adding to empty list renders correctly 1`] = `
<ContactsForm
  className="custom-class"
  contactsTableHeader="Contacts Table Header"
  data={Array []}
  onChange={[MockFunction]}
>
  <div
    className="contacts-form custom-class"
  >
    <OceanExpertNameInput
      oceanExpertName=""
      onChange={[Function]}
    >
      <div
        className="ocean-expert-name-input field column is-four-fifths mandatory"
      >
        <div
          className="dropdown"
        >
          <div
            className="dropdown-trigger"
          >
            <label
              className="label"
            >
              userFormPage.name.label
            </label>
            <div
              className="control has-icons-right "
            >
              <input
                className="input"
                onChange={[Function]}
                onClick={[Function]}
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="dropdown-menu"
            id="dropdown-menu"
            role="menu"
          >
            <div
              className="dropdown-content"
            />
          </div>
        </div>
      </div>
    </OceanExpertNameInput>
    <div
      className="columns column"
    >
      <InputText
        className="column email"
        name="datasetPageFormPage.contactsForm.email"
        onChange={[Function]}
        value=""
      >
        <div
          className="column field column email"
        >
          <label
            className="label"
          >
            datasetPageFormPage.contactsForm.email.label
          </label>
          <input
            className="input"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </InputText>
      <InputText
        className="column organisation"
        name="datasetPageFormPage.contactsForm.organisation"
        onChange={[Function]}
        value=""
      >
        <div
          className="column field column organisation"
        >
          <label
            className="label"
          >
            datasetPageFormPage.contactsForm.organisation.label
          </label>
          <input
            className="input"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </InputText>
      <div
        className="column field fix-alignment"
      >
        <button
          className="add button"
          onClick={[Function]}
        >
          common.add
        </button>
      </div>
    </div>
    <div
      className="column field"
    >
      <div
        className="title is-5 contacts-table-header"
      >
        Contacts Table Header
      </div>
      <table
        className="general table is-fullwidth is-striped is-hoverable"
      >
        <thead>
          <tr>
            <th>
              datasetPageFormPage.contactsForm.name.label
            </th>
            <th>
              datasetPageFormPage.contactsForm.email.label
            </th>
            <th>
              datasetPageFormPage.contactsForm.organisation.label
            </th>
            <th />
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
</ContactsForm>
`;

exports[`ContactsForm returns updated contacts when adding to list with single element renders correctly 1`] = `
<ContactsForm
  className="custom-class"
  contactsTableHeader="Contacts Table Header"
  data={
    Array [
      Object {
        "email": "email-1",
        "name": "name-1",
        "organisation": "organisation-1",
      },
    ]
  }
  onChange={[MockFunction]}
>
  <div
    className="contacts-form custom-class"
  >
    <OceanExpertNameInput
      oceanExpertName=""
      onChange={[Function]}
    >
      <div
        className="ocean-expert-name-input field column is-four-fifths mandatory"
      >
        <div
          className="dropdown"
        >
          <div
            className="dropdown-trigger"
          >
            <label
              className="label"
            >
              userFormPage.name.label
            </label>
            <div
              className="control has-icons-right "
            >
              <input
                className="input"
                onChange={[Function]}
                onClick={[Function]}
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="dropdown-menu"
            id="dropdown-menu"
            role="menu"
          >
            <div
              className="dropdown-content"
            />
          </div>
        </div>
      </div>
    </OceanExpertNameInput>
    <div
      className="columns column"
    >
      <InputText
        className="column email"
        name="datasetPageFormPage.contactsForm.email"
        onChange={[Function]}
        value=""
      >
        <div
          className="column field column email"
        >
          <label
            className="label"
          >
            datasetPageFormPage.contactsForm.email.label
          </label>
          <input
            className="input"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </InputText>
      <InputText
        className="column organisation"
        name="datasetPageFormPage.contactsForm.organisation"
        onChange={[Function]}
        value=""
      >
        <div
          className="column field column organisation"
        >
          <label
            className="label"
          >
            datasetPageFormPage.contactsForm.organisation.label
          </label>
          <input
            className="input"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </InputText>
      <div
        className="column field fix-alignment"
      >
        <button
          className="add button"
          onClick={[Function]}
        >
          common.add
        </button>
      </div>
    </div>
    <div
      className="column field"
    >
      <div
        className="title is-5 contacts-table-header"
      >
        Contacts Table Header
      </div>
      <table
        className="general table is-fullwidth is-striped is-hoverable"
      >
        <thead>
          <tr>
            <th>
              datasetPageFormPage.contactsForm.name.label
            </th>
            <th>
              datasetPageFormPage.contactsForm.email.label
            </th>
            <th>
              datasetPageFormPage.contactsForm.organisation.label
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          <ContactRow
            email="email-1"
            key="0"
            name="name-1"
            onRemove={[Function]}
            organisation="organisation-1"
          >
            <tr
              className="contact-row"
            >
              <td
                className="name"
              >
                name-1
              </td>
              <td
                className="email"
              >
                email-1
              </td>
              <td
                className="organisation"
              >
                organisation-1
              </td>
              <td
                className="action"
              >
                <button
                  className="remove button"
                  onClick={[Function]}
                >
                  common.remove
                </button>
              </td>
            </tr>
          </ContactRow>
        </tbody>
      </table>
    </div>
  </div>
</ContactsForm>
`;

exports[`ContactsForm when removing contacts removes first contact 1`] = `
<ContactsForm
  contactsTableHeader="Contacts Table Header"
  data={
    Array [
      Object {
        "email": "email-1",
        "name": "name-1",
        "organisation": "organisation-1",
      },
      Object {
        "email": "email-2",
        "name": "name-2",
        "organisation": "organisation-2",
      },
    ]
  }
  onChange={[MockFunction]}
>
  <div
    className="contacts-form"
  >
    <OceanExpertNameInput
      oceanExpertName=""
      onChange={[Function]}
    >
      <div
        className="ocean-expert-name-input field column is-four-fifths mandatory"
      >
        <div
          className="dropdown"
        >
          <div
            className="dropdown-trigger"
          >
            <label
              className="label"
            >
              userFormPage.name.label
            </label>
            <div
              className="control has-icons-right "
            >
              <input
                className="input"
                onChange={[Function]}
                onClick={[Function]}
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="dropdown-menu"
            id="dropdown-menu"
            role="menu"
          >
            <div
              className="dropdown-content"
            />
          </div>
        </div>
      </div>
    </OceanExpertNameInput>
    <div
      className="columns column"
    >
      <InputText
        className="column email"
        name="datasetPageFormPage.contactsForm.email"
        onChange={[Function]}
        value=""
      >
        <div
          className="column field column email"
        >
          <label
            className="label"
          >
            datasetPageFormPage.contactsForm.email.label
          </label>
          <input
            className="input"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </InputText>
      <InputText
        className="column organisation"
        name="datasetPageFormPage.contactsForm.organisation"
        onChange={[Function]}
        value=""
      >
        <div
          className="column field column organisation"
        >
          <label
            className="label"
          >
            datasetPageFormPage.contactsForm.organisation.label
          </label>
          <input
            className="input"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </InputText>
      <div
        className="column field fix-alignment"
      >
        <button
          className="add button"
          onClick={[Function]}
        >
          common.add
        </button>
      </div>
    </div>
    <div
      className="column field"
    >
      <div
        className="title is-5 contacts-table-header"
      >
        Contacts Table Header
      </div>
      <table
        className="general table is-fullwidth is-striped is-hoverable"
      >
        <thead>
          <tr>
            <th>
              datasetPageFormPage.contactsForm.name.label
            </th>
            <th>
              datasetPageFormPage.contactsForm.email.label
            </th>
            <th>
              datasetPageFormPage.contactsForm.organisation.label
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          <ContactRow
            email="email-1"
            key="0"
            name="name-1"
            onRemove={[Function]}
            organisation="organisation-1"
          >
            <tr
              className="contact-row"
            >
              <td
                className="name"
              >
                name-1
              </td>
              <td
                className="email"
              >
                email-1
              </td>
              <td
                className="organisation"
              >
                organisation-1
              </td>
              <td
                className="action"
              >
                <button
                  className="remove button"
                  onClick={[Function]}
                >
                  common.remove
                </button>
              </td>
            </tr>
          </ContactRow>
          <ContactRow
            email="email-2"
            key="1"
            name="name-2"
            onRemove={[Function]}
            organisation="organisation-2"
          >
            <tr
              className="contact-row"
            >
              <td
                className="name"
              >
                name-2
              </td>
              <td
                className="email"
              >
                email-2
              </td>
              <td
                className="organisation"
              >
                organisation-2
              </td>
              <td
                className="action"
              >
                <button
                  className="remove button"
                  onClick={[Function]}
                >
                  common.remove
                </button>
              </td>
            </tr>
          </ContactRow>
        </tbody>
      </table>
    </div>
  </div>
</ContactsForm>
`;

exports[`ContactsForm when removing contacts removes second contact 1`] = `
<ContactsForm
  contactsTableHeader="Contacts Table Header"
  data={
    Array [
      Object {
        "email": "email-1",
        "name": "name-1",
        "organisation": "organisation-1",
      },
      Object {
        "email": "email-2",
        "name": "name-2",
        "organisation": "organisation-2",
      },
    ]
  }
  onChange={[MockFunction]}
>
  <div
    className="contacts-form"
  >
    <OceanExpertNameInput
      oceanExpertName=""
      onChange={[Function]}
    >
      <div
        className="ocean-expert-name-input field column is-four-fifths mandatory"
      >
        <div
          className="dropdown"
        >
          <div
            className="dropdown-trigger"
          >
            <label
              className="label"
            >
              userFormPage.name.label
            </label>
            <div
              className="control has-icons-right "
            >
              <input
                className="input"
                onChange={[Function]}
                onClick={[Function]}
                placeholder=""
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="dropdown-menu"
            id="dropdown-menu"
            role="menu"
          >
            <div
              className="dropdown-content"
            />
          </div>
        </div>
      </div>
    </OceanExpertNameInput>
    <div
      className="columns column"
    >
      <InputText
        className="column email"
        name="datasetPageFormPage.contactsForm.email"
        onChange={[Function]}
        value=""
      >
        <div
          className="column field column email"
        >
          <label
            className="label"
          >
            datasetPageFormPage.contactsForm.email.label
          </label>
          <input
            className="input"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </InputText>
      <InputText
        className="column organisation"
        name="datasetPageFormPage.contactsForm.organisation"
        onChange={[Function]}
        value=""
      >
        <div
          className="column field column organisation"
        >
          <label
            className="label"
          >
            datasetPageFormPage.contactsForm.organisation.label
          </label>
          <input
            className="input"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
      </InputText>
      <div
        className="column field fix-alignment"
      >
        <button
          className="add button"
          onClick={[Function]}
        >
          common.add
        </button>
      </div>
    </div>
    <div
      className="column field"
    >
      <div
        className="title is-5 contacts-table-header"
      >
        Contacts Table Header
      </div>
      <table
        className="general table is-fullwidth is-striped is-hoverable"
      >
        <thead>
          <tr>
            <th>
              datasetPageFormPage.contactsForm.name.label
            </th>
            <th>
              datasetPageFormPage.contactsForm.email.label
            </th>
            <th>
              datasetPageFormPage.contactsForm.organisation.label
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          <ContactRow
            email="email-1"
            key="0"
            name="name-1"
            onRemove={[Function]}
            organisation="organisation-1"
          >
            <tr
              className="contact-row"
            >
              <td
                className="name"
              >
                name-1
              </td>
              <td
                className="email"
              >
                email-1
              </td>
              <td
                className="organisation"
              >
                organisation-1
              </td>
              <td
                className="action"
              >
                <button
                  className="remove button"
                  onClick={[Function]}
                >
                  common.remove
                </button>
              </td>
            </tr>
          </ContactRow>
          <ContactRow
            email="email-2"
            key="1"
            name="name-2"
            onRemove={[Function]}
            organisation="organisation-2"
          >
            <tr
              className="contact-row"
            >
              <td
                className="name"
              >
                name-2
              </td>
              <td
                className="email"
              >
                email-2
              </td>
              <td
                className="organisation"
              >
                organisation-2
              </td>
              <td
                className="action"
              >
                <button
                  className="remove button"
                  onClick={[Function]}
                >
                  common.remove
                </button>
              </td>
            </tr>
          </ContactRow>
        </tbody>
      </table>
    </div>
  </div>
</ContactsForm>
`;
